assets/style.css
html {
  font-size: 16px;
}

@import url('https://fonts.googleapis.com/css?family=Asap:400,400i,500,500i,600,600i|Inconsolata&display=swap');

body {
  margin: 0px auto;
  max-width: 800px;
  font-family: "Asap", sans-serif;
}

h1, h2, h3, h4, h5, h6, header {
  font-family: "Asap", sans-serif;
  font-weight: 500;
}

b, strong {
  font-weight: 500;
}

pre, code {
  font-family: "Inconsolata", monospace;
}


nav.artifacts {
  background-color: #f2f2f2;
  width: 100vw;
  text-align: center;
  left: 0;
  position: absolute;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

span.artifacts > label {
  visibility: hidden;
}

span.artifacts::hover > label {
  visibility: visible;
}

